# fmm-solver

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_scaling.cpp  run_scaling.py
docs/: theory.md
include/fmm/: direct_sum.hpp  fmm_solver.hpp  local.hpp  multipole.hpp  octree.hpp  spherical_harmonics.hpp
src/: direct_sum.cpp  fmm_solver.cpp  local.cpp  multipole.cpp  octree.cpp  spherical_harmonics.cpp
tests/: test_direct_sum.cpp  test_fmm_solver.cpp  test_local.cpp  test_multipole.cpp  test_octree.cpp  test_spherical_harmonics.cpp
